--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-3d99" data-image-width="640" data-image-height="400">
-      <div class="u-clearfix u-sheet u-valign-top-md u-valign-top-sm u-valign-top-xs u-sheet-1"></div>
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-3d99" data-image-width="640" data-image-height="400">
+      <div class="u-clearfix u-sheet u-sheet-1"></div>
     </section>
     <section class="u-clearfix u-section-2" id="sec-10bc">
       <div class="u-clearfix u-sheet u-sheet-1">
