--- a/Prevent-Hair-Loss.html
+++ b/Prevent-Hair-Loss.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Food Items to Avoid</title>
+    <title>Prevent Hair Loss</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Food-Items-to-Avoid.css" media="screen">
+<link rel="stylesheet" href="Prevent-Hair-Loss.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link rel="icon" href="images/favicon.png">
@@ -27,7 +27,7 @@
 		"name": "NinaHealthy "
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Food Items to Avoid">
+    <meta property="og:title" content="Prevent Hair Loss">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087636695455778"
@@ -84,53 +84,77 @@
     </section>
     <section class="u-clearfix u-section-2" id="sec-f750">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-left u-text u-text-1"> 9 Food Items to Avoid Like the Plague if You Want to Have Great Teeth</h1>
+        <h1 class="u-align-left u-text u-text-1"> Prevent Hair Loss By Eating These Foods</h1>
       </div>
     </section>
     <section class="u-clearfix u-section-3" id="sec-b088">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-align-center u-clearfix u-custom-html u-expanded-width u-custom-html-1"></div>
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <div class="u-align-center u-clearfix u-custom-html u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-custom-html-1"></div>
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-4" id="sec-5388">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
-          <p>A healthy diet is essential to maintain good oral health, and the teeth need special care to avoid decay, gum infections, and other health problems. And therefore, you should not increase the number of foods that harm their health. Sugar is not the only factor that breaks teeth, and many other foods can cause decay, erode teeth, and other problems. We mention the following:</p>
-          <h3>citrus fruits</h3>
-          <p>It is better to lack the intake of acidic foods and acidic drinks, as they harm the health of tooth enamel and cause tooth erosion. It increases the risk of developing decay, and it causes discomfort when mouth sores are present among the most prominent acidic foods that cause tooth damage: lemon and oranges, whether they are eaten as a fruit or juice, in addition to tomatoes.</p>
-          <h3>Ice cream</h3>
-          <p>Although ice does not contain any substances except water after freezing it, it can harm the teeth, and ice cream and others contain sugars that are harmful to the teeth, as ice cream causes tooth sensitivity, and chewing solids causes damage to the enamel.</p>
-          <h3>Coffee and tea</h3>
-          <p>Excessive caffeine consumption can affect Like coffee and tea, it negatively affects dental health and increases the risk of necrosis because it causes dehydration in the oral cavity, which leads to a decrease in saliva production, and thus a condition called dry mouth, and caffeine drinks usually contain added sugar; In addition, consuming these drinks excessively can lead to staining of the teeth, and to reduce their harmful effects, it is recommended to drink a large amount of water afterward.</p>
-          <h3>Gelatin dessert</h3>
-          <p>As it adheres to the teeth and the sugar and the resulting acids remain for a long time, which negatively affects the enamel layer. Still, in the event that it is eaten, it is recommended that it be part of the meal and not as a separate snack, as this helps to wash the mouth of sweets and acid due to the presence of a more significant amount of saliva during meals.</p>
-          <h3>Fruit juice</h3>
-          <p>Although fruit juice provides a large number of vitamins and antioxidants, it also contains a high percentage of sugar, and it may sometimes reach the same rate of sugar found in soft drinks, and therefore. It is recommended to consume juices without adding sugar, as fruits taste Naturally sweet, you can also add water to reduce the sugar content.</p>
+          <p>
+            <span style="font-size: 1.125rem;">Healthy nutrition is very important for healthy hair growth and is an important tip for those who suffer from hair loss, damaged hair, or slow hair growth. Hair is a fast-growing tissue, and following a healthy diet can make a big difference in how hair grows. To obtain healthy hair growth requires many nutrients such as vitamin A, vitamin C, vitamin E, vitamin B6, vitamin B6, vitamin B12, iron, zinc, protein, fatty acids, silica, sulfur, and germanium. There are some foods rich in nutrients that reduce hair loss, and The most important of them are:</span>
+          </p>
+          <h2>Spinach</h2>
+          <p>
+            <span style="font-size: 1.125rem;">Spinach contains beneficial nutrients and antioxidants. It is a vegetable with green leaves. It is a good source of vitamins C, B, E, potassium, calcium, iron, magnesium, all of which help in the healthy growth of hair. The nutritional benefits of spinach make it an excellent healthy food for anyone looking for long, gorgeous hair. In addition to spinach, you should eat other vegetables such as cauliflower and cabbage to prevent hair loss.</span>
+          </p>
+          <h2>Citrus fruits and paprika</h2>
+          <p>
+            <span style="font-size: 1.125rem;">Citrus fruits, sweet red peppers, and sweet green peppers are rich sources of Vitamin C, which has an essential role in maintaining hair health and preventing hair loss.</span>
+          </p>
+          <h2>Red meat and meat fillet</h2>
+          <p>
+            <span style="font-size: 1.125rem;">These meats and liver are among the richest foods in protein and iron, as iron and protein are among the most important elements responsible for maintaining healthy hair.</span>
+          </p>
+          <h2>eggs</h2>
+          <p>
+            <span style="font-size: 1.125rem;">Protein is the main component of hair. Therefore, you have to eat foods that contain protein, including eggs. It is a good source of protein and some other elements, biotin, and vitamin B, which help control hair loss. And eggs contain high-quality protein to get strong hair and faster growth. It is best to eat the yolk and egg whites together. You can eat an egg daily, depending on how you prefer to eat eggs, whether fried or boiled, to get healthy hair.</span>
+          </p>
+          <h2>Beans</h2>
+          <p>
+            <span style="font-size: 1.125rem;">Fava beans contain low calories and a large amount of protein, fiber, vitamin B, vitamin C, zinc, and minerals essential for hair growth. Fava beans also contain a rich amount of iron, an essential ingredient to preventing hair loss. Your nutritional program must include different types of dry and fresh beans for the hair to get the nutrients needed for better growth. There are different types of beans, including soybeans, navy beans, pinto beans, chickpeas, black beans, and more.</span>
+          </p>
         </div>
       </div>
     </section>
     <section class="u-clearfix u-section-5" id="sec-2f0a">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-align-center u-clearfix u-custom-html u-expanded-width u-custom-html-1"></div>
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <div class="u-align-center u-clearfix u-custom-html u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-custom-html-1"></div>
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-6" id="sec-d3b9">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
-          <h3>Sugars</h3>
-          <p>Sugar attracts harmful bacteria. This leads to damage to tooth enamel and thus can cause decay of infected teeth and the formation of cavities, so it is advised to reduce the consumption of foods and drinks rich in sugar and to avoid consuming them between meals and directly before bed in particular, and if you want to eat them, it is preferable to take them with meals; During eating, the mouth produces more saliva, which helps to moisturize food pieces inside the mouth and reduce the effect of acid production.</p>
-          <h3>Tooth Rinse</h3>
-          <p>Many people are accustomed to using dental care products such as tooth rinse to get rid of food residues between the teeth or to get a refreshing breath. Still, excessive use of dental care products too often causes erosion of the tooth enamel layer, which leads to a feeling of tooth sensitivity. Hence, the layer of tooth enamel works to protect the teeth from pain when consuming very cold or hot drinks, so use dental care products regularly and without excessive use to take care of your teeth.</p>
-          <h3>Soft Drinks</h3>
-          <p>When you drink soft drinks for long periods, plaque bacteria use this sugar to produce acids that attack your enamel, and they also cause dry mouth. And because most soft drinks, including sugar-free ones, contain acids and are therefore harmful to the teeth.</p>
-          <h3>Salty Biscuit</h3>
-          <p>It is surprising to know that salty biscuits are almost the most dangerous food for oral health, so the carbohydrates in them are quickly broken down in the mouth, and within seconds they become just a lump of sugar on which pathogenic bacteria feed on and the bacteria while feeding on sugars secrete acid on the teeth, which may lead to the deposition of dental plaque Tooth decay.</p>
+          <h2>Nuts</h2>
+          <p>
+            <span style="font-size: 1.125rem;">Nuts contain a large amount of protein, vitamins, minerals, iron, zinc, healthy fats, and plant elements that are indispensable for solving hair loss and solving the problem of dry hair. Eating nuts regularly helps hair grow for many years. There are different types of nuts, including almonds, peanuts, walnuts, and cashews, that can be included in your diet. There is no need to eat many nuts for the proper growth of hair, but a few of them can be eaten or added to salads, pasta, or sweets and can be eaten as a snack.</span>
+          </p>
+          <h2>sunflower seeds</h2>
+          <p>
+            <span style="font-size: 1.125rem;">Sunflower seeds contain many nutrients that are beneficial for hair growth. These include protein, selenium, biotin, potassium, copper, iron, vitamin B, vitamin C, magnesium, calcium, and high omega-6 fatty acids. When it comes to sunflower seed oil, this requires an adequate amount because overuse leads to hair loss.</span>
+          </p>
+          <h2>Dairy products</h2>
+          <p>
+            <span style="font-size: 1.125rem;">An excellent source of zinc and iodine, which are beneficial for hair strength, and dairy products such as cheese and yogurt provide the body with vitamins A, B, C, and E, which prevent hair weakness and hair loss, so consuming milk and dairy products is an effective treatment in preventing hair loss.</span>
+          </p>
+          <h2>Broccoli</h2>
+          <p>
+            <span style="font-size: 1.125rem;">It contains a large amount of zinc, iron, and beta-carotene that treat anemia that causes hair loss, and it also strengthens hair follicles and prevents hair loss.</span>
+          </p>
+          <h2>Salmon</h2>
+          <p>
+            <span style="font-size: 1.125rem;">Salmon is a fatty fish that is very beneficial for the mind, blood vessels, skin, and also for hair. It is a rich food of omega-3 fatty acids, which work on hair growth. It also contains many proteins, vitamin B, and other minerals, all of which are nutrients for hair growth and solving hair problems such as dryness and hair loss. It is important to eat salmon at least twice a week to get its benefits.</span>
+          </p>
         </div>
       </div>
     </section>
     <section class="u-clearfix u-section-7" id="sec-4553">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-align-center u-clearfix u-custom-html u-expanded-width u-custom-html-1"></div>
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <div class="u-align-center u-clearfix u-custom-html u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-custom-html-1"></div>
       </div>
     </section>
     
